fix comment overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,8 @@ p {
 
   #comment {
       overflow: auto;
+      height: 89.72px;
+
   }
 
   
